chore(license): update license refs to GPL3+

--- a/pytest.ini
+++ b/pytest.ini
@@ -1,4 +1,16 @@
+#
 # (C) 2025 Alexei Znamensky
 # Licensed under the GPL-3.0-or-later license. See LICENSES/GPL-3.0-or-later.txt for details.
 # SPDX-FileCopyrightText: 2025 Alexei Znamensky
 # SPDX-License-Identifier: GPL-3.0-or-later
+#
+
+[pytest]
+addopts =
+    # --cov-report=term-missing
+    # --cov-report=html:htmlcov
+    # --cov-report=xml
+    --junitxml=junit.xml
+
+testpaths =
+    tests
