--- a/.gitignore
+++ b/.gitignore
@@ -1,8 +1,8 @@
 #
 # (C) 2025 Alexei Znamensky
-# Licensed under the MIT License. See LICENSES/MIT.txt for details.
+# Licensed under the GPL-3.0-or-later license. See LICENSES/GPL-3.0-or-later.txt for details.
 # SPDX-FileCopyrightText: 2025 Alexei Znamensky
-# SPDX-License-Identifier: MIT
+# SPDX-License-Identifier: GPL-3.0-or-later
 #
 
 # Local configuration
