--- a/.pylintrc
+++ b/.pylintrc
@@ -2,3 +2,6 @@
 # Licensed under the GPL-3.0-or-later license. See LICENSES/GPL-3.0-or-later.txt for details.
 # SPDX-FileCopyrightText: 2025 Alexei Znamensky
 # SPDX-License-Identifier: GPL-3.0-or-later
+
+[MESSAGES CONTROL]
+disable=C0301,C0103,C0114,C0115,C0116,C0209,W1514,R1735
