--- a/pyproject.toml
+++ b/pyproject.toml
@@ -3,7 +3,7 @@ name = "screenwriter"
 version = "0.0.1"
 description = "Script and automate interactive terminal sessions for generating asciinema .cast files and reproducible demos."
 authors = ["Alexei Znamensky <russoz@gmail.com>"]
-license = "MIT"
+license = "GPL-3.0-or-later"
 readme = "README.md"
 homepage = "https://github.com/russoz/screenwriter"
 repository = "https://github.com/russoz/screenwriter"
@@ -14,7 +14,7 @@ classifiers = [
     "Intended Audience :: Information Technology",
     "Intended Audience :: System Administrators",
     "Operating System :: OS Independent",
-    "License :: OSI Approved :: MIT License",
+    "License :: OSI Approved :: GNU General Public License v3 or later (GPLv3+)",
     "Programming Language :: Python",
     "Programming Language :: Python :: 3",
     "Programming Language :: Python :: 3.11",
