--- a/pyproject.toml
+++ b/pyproject.toml
@@ -54,6 +54,7 @@ flake8 = ">=6,<8"
 pre-commit = "^4.2.0"
 python-semantic-release = ">=9.21.1,<11.0.0"
 junit-xml = "^1.9"
+asciinema = "^2.4.0"
 
 [tool.poetry.group.docs.dependencies]
 sphinx = "^8.2.3"
