--- a/.github/workflows/release.yml
+++ b/.github/workflows/release.yml
@@ -9,10 +9,10 @@ permissions: {}  # remove top-level permissions
 
 on:
   workflow_dispatch:
-  push:
-    tags:
-      - "v[0-9]+.[0-9]+.[0-9]+*"
-    branches: [main]
+  # push:
+  #   tags:
+  #     - "v[0-9]+.[0-9]+.[0-9]+*"
+  #   branches: [main]
 
 jobs:
   release:
