--- a/pytest.ini
+++ b/pytest.ini
@@ -7,9 +7,9 @@
 
 [pytest]
 addopts =
-    # --cov-report=term-missing
-    # --cov-report=html:htmlcov
-    # --cov-report=xml
+    --cov-report=term-missing
+    --cov-report=html:htmlcov
+    --cov-report=xml
     --junitxml=junit.xml
 
 testpaths =
