--- a/.github/workflows/release.yml
+++ b/.github/workflows/release.yml
@@ -20,7 +20,7 @@ jobs:
     steps:
     - uses: actions/checkout@v4
       with:
-        persist-credentials: false
+        # persist-credentials: false
         fetch-depth: 0
         ref: ${{ github.head_ref || github.ref_name }}
 
