ci: pass GH_TOKEN as env var to the command

--- a/.github/workflows/release.yml
+++ b/.github/workflows/release.yml
@@ -64,8 +64,8 @@ jobs:
 
     - name: Create Release
       run: |
-        GH_TOKEN=${{ secrets.GITHUB_TOKEN }} poetry run semantic-release --verbose version
-        GH_TOKEN=${{ secrets.GITHUB_TOKEN }} poetry run semantic-release --verbose publish
+        GH_TOKEN=${{ github.token }} poetry run semantic-release --verbose version
+        GH_TOKEN=${{ github.token }} poetry run semantic-release --verbose publish
     - name: Store the distribution packages
       uses: actions/upload-artifact@v4
       with:
