chore(semantic-release): add allow_zero_version=true to settings

--- a/pyproject.toml
+++ b/pyproject.toml
@@ -81,6 +81,7 @@ major_on_zero = false
 tag_format = "v{version}"
 parse_version_from_tag = true
 version_pattern = "v(?P<version>\\d+\\.\\d+\\.\\d+)"
+allow_zero_version = true
 
 [tool.semantic_release.publish]
 upload_to_vcs_release = true
