--- a/.github/workflows/release.yml
+++ b/.github/workflows/release.yml
@@ -16,6 +16,8 @@ jobs:
   build:
     runs-on: ubuntu-latest
     concurrency: release
+    permissions:
+      contents: write
 
     steps:
     - uses: actions/checkout@v4
