refactor: rename project to asciinwriter

--- a/.github/workflows/ci-tests.yml
+++ b/.github/workflows/ci-tests.yml
@@ -3,7 +3,7 @@
 # SPDX-FileCopyrightText: 2025 Alexei Znamensky
 # SPDX-License-Identifier: GPL-3.0-or-later
 
-name: Test screenwriter
+name: Test asciinwriter
 
 permissions:
   contents: write
