--- a/.devcontainer/devcontainer.json
+++ b/.devcontainer/devcontainer.json
@@ -1,5 +1,5 @@
 {
-  "name": "screenwriter devcontainer",
+  "name": "asciinwriter devcontainer",
   "build": {
     "dockerfile": "Dockerfile",
     "context": ".."
