--- a/.github/workflows/release.yml
+++ b/.github/workflows/release.yml
@@ -13,16 +13,12 @@ on:
   #   branches: [main]
 
 jobs:
-  build:
+  test:
     runs-on: ubuntu-latest
-    concurrency: release
-    permissions:
-      contents: write
-
     steps:
     - uses: actions/checkout@v4
       with:
-        # persist-credentials: false
+        persist-credentials: false
         fetch-depth: 0
         ref: ${{ github.head_ref || github.ref_name }}
 
@@ -35,21 +31,7 @@ jobs:
       run: |
         python -m pip install --upgrade pip
         pip install poetry
-
-    - name: Configure Git
-      run: |
-        git config user.name "github-actions[bot]"
-        git config user.email "github-actions[bot]@users.noreply.github.com"
-
-    - name: Create build environment
-      run: |
-        poetry lock
         poetry install --verbose --with dev
-        if ! git diff --quiet poetry.lock; then
-          git add poetry.lock
-          git commit -m "chore: update poetry.lock"
-          git push
-        fi
 
     - name: Run linter and tests
       env:
@@ -58,16 +40,45 @@ jobs:
         poetry run flake8 -v . --count --show-source --statistics
         poetry run pytest -v --cov
 
+  build:
+    runs-on: ubuntu-latest
+    needs: test
+    permissions:
+      contents: write
+    steps:
+    - uses: actions/checkout@v4
+      with:
+        persist-credentials: false
+        fetch-depth: 0
+        ref: ${{ github.head_ref || github.ref_name }}
+
+    - name: Python setup
+      uses: actions/setup-python@v5
+      with:
+        python-version: '3.11'
+
+    - name: Install dependencies
+      run: |
+        python -m pip install --upgrade pip
+        pip install poetry
+        poetry install --verbose --with dev
+
+    - name: Configure Git
+      run: |
+        git config user.name "github-actions[bot]"
+        git config user.email "github-actions[bot]@users.noreply.github.com"
+
+    - name: Create Release
+      run: |
+        GH_TOKEN=${{ github.token }} poetry run semantic-release --verbose version
+        GH_TOKEN=${{ github.token }} poetry run semantic-release --verbose publish
+
     - name: Upload coverage reports to Codecov
       uses: codecov/codecov-action@v5
       with:
         token: ${{ secrets.CODECOV_TOKEN }}
         verbose: true
 
-    - name: Create Release
-      run: |
-        GH_TOKEN=${{ github.token }} poetry run semantic-release --verbose version
-        GH_TOKEN=${{ github.token }} poetry run semantic-release --verbose publish
     - name: Store the distribution packages
       uses: actions/upload-artifact@v4
       with:
