--- a/.github/workflows/release.yml
+++ b/.github/workflows/release.yml
@@ -14,37 +14,40 @@ on:
 
 jobs:
   test:
+    strategy:
+      matrix:
+        python-version: ["3.11", "3.12", "3.13"]
     runs-on: ubuntu-latest
     steps:
-    - uses: actions/checkout@v4
-      with:
-        persist-credentials: false
-        fetch-depth: 0
-        ref: ${{ github.head_ref || github.ref_name }}
+      - uses: actions/checkout@v4
+        with:
+          persist-credentials: false
+          fetch-depth: 0
+          ref: ${{ github.head_ref || github.ref_name }}
 
-    - name: Python setup
-      uses: actions/setup-python@v5
-      with:
-        python-version: '3.11'
+      - name: Python setup
+        uses: actions/setup-python@v5
+        with:
+          python-version: ${{ matrix.python-version }}
 
-    - name: Install dependencies
-      run: |
-        python -m pip install --upgrade pip
-        pip install poetry
-        poetry install --verbose --with dev
+      - name: Install dependencies
+        run: |
+          python -m pip install --upgrade pip
+          pip install poetry
+          poetry install --verbose --with dev
 
-    - name: Run linter and tests
-      env:
-        PYTHONPATH: .
-      run: |
-        poetry run flake8 -v . --count --show-source --statistics
-        poetry run pytest -v --cov
+      - name: Run linter and tests
+        env:
+          PYTHONPATH: .
+        run: |
+          poetry run flake8 -v . --count --show-source --statistics
+          poetry run pytest -v --cov
 
-    - name: Upload coverage reports to Codecov
-      uses: codecov/codecov-action@v5
-      with:
-        token: ${{ secrets.CODECOV_TOKEN }}
-        verbose: true
+      - name: Upload coverage reports to Codecov
+        uses: codecov/codecov-action@v5
+        with:
+          token: ${{ secrets.CODECOV_TOKEN }}
+          verbose: true
 
   build:
     runs-on: ubuntu-latest
@@ -52,45 +55,43 @@ jobs:
     permissions:
       contents: write
     steps:
-    - uses: actions/checkout@v4
-      with:
-        persist-credentials: false
-        fetch-depth: 0
-        ref: ${{ github.head_ref || github.ref_name }}
+      - uses: actions/checkout@v4
+        with:
+          persist-credentials: false
+          fetch-depth: 0
+          ref: ${{ github.head_ref || github.ref_name }}
 
-    - name: Python setup
-      uses: actions/setup-python@v5
-      with:
-        python-version: '3.11'
+      - name: Python setup
+        uses: actions/setup-python@v5
+        with:
+          python-version: '3.11'
 
-    - name: Install dependencies
-      run: |
-        python -m pip install --upgrade pip
-        pip install poetry
-        poetry install --verbose --with dev
+      - name: Install dependencies
+        run: |
+          python -m pip install --upgrade pip
+          pip install poetry
+          poetry install --verbose --with dev
 
-    - name: Configure Git
-      run: |
-        git config user.name "github-actions[bot]"
-        git config user.email "github-actions[bot]@users.noreply.github.com"
+      - name: Configure Git
+        run: |
+          git config user.name "github-actions[bot]"
+          git config user.email "github-actions[bot]@users.noreply.github.com"
 
-    - name: Create Release
-      run: |
-        GH_TOKEN=${{ github.token }} poetry run semantic-release --verbose version
-        GH_TOKEN=${{ github.token }} poetry run semantic-release --verbose publish
+      - name: Create Release
+        run: |
+          GH_TOKEN=${{ github.token }} poetry run semantic-release --verbose version
+          GH_TOKEN=${{ github.token }} poetry run semantic-release --verbose publish
 
-    - name: Store the distribution packages
-      uses: actions/upload-artifact@v4
-      with:
-        name: asciinwriter-distributions
-        path: dist/
+      - name: Store the distribution packages
+        uses: actions/upload-artifact@v4
+        with:
+          name: asciinwriter-distributions
+          path: dist/
 
   publish-to-pypi:
-    name: >-
-      Publish Python distribution to PyPI
     if: startsWith(github.ref, 'refs/tags/')  # only publish to PyPI on tag pushes
     needs:
-    - build
+      - build
     runs-on: ubuntu-latest
     environment:
       name: pypi
